--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.json filter=lfs diff=lfs merge=lfs -text
 gpt2-small/**/*.json filter=lfs diff=lfs merge=lfs -text
+gpt2-small-organized/**/*.json filter=lfs diff=lfs merge=lfs -text
